# web_7

./: config.ini  my_select.py  pyproject.toml
alembic/versions/: 06df7755ecd8_uograde_models.py  23db76a3085f_again_upgrade_models.py  2bd415b49487_3xagain_upgrade_models.py  3b6f06f67c11_4xagain_upgrade_models.py  534623fd3a44_5xagain_upgrade_models.py  6ac35b82fc65_init.py  6c326f542712_6xagain_upgrade_models.py  ef3c50400320_2xagain_upgrade_models.py
database/: models.py
seeds/: fill.py
